fix: reset mq message on second read
- updated extract payload method for error handling to reset the
  internal pointer message as it is already at the end of the message
  from the first attempt

Signed-off-by: Joel Hanson <joelhanson025@gmail.com>